--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+my_number:
+  path: /moja/liczba
+  controller: App\Controller\LuckyController::number
