--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,11 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
-#
-#app_lucky_number:
-#  path: /lucky/number
+
+#number:
+#  path: /number
 #  controller: App\Controller\LuckyController::number
+
+app_logout:
+  path: /logout
+  methods: GET
